# mitsunori-portfolio

./: CNAME  index.html
assets/: index-B3wMkwEy.css  index-BjVr5TZA.js  index-CRSyltHx.js  index-CYAWdZMF.js  index-D5ZW-Jat.js  index-DNpjmRoF.js  index-mlRrPVHe.css
company/: .gitignore  README.md
company/accounting-agent/: .env.example  README.md  com.mitsu.accounting-agent.plist  pyproject.toml
company/accounting-agent/reports/: 2026-05.json
company/accounting-agent/scripts/: export_report.py  fetch_invoices.py  record_event.py
company/accounting-agent/src/accounting/: __init__.py  auth.py  drive.py  gmail.py  parser.py  sheets.py
company/api/: main.py  pyproject.toml
company/api/routers/: accounting.py  agents.py
company/ceo-agent/: README.md
company/dev-agent/: README.md
company/frontend/: package-lock.json
company/sales-agent/: README.md
mitsunori-portfolio/: index.html  package-lock.json  package.json
mitsunori-portfolio/public/: CNAME
mitsunori-portfolio/src/: App.css  App.tsx  index.css
products/Sichusuimei/: README.md
products/berlin-biyori-bot/: .env.example  .gitignore  LICENCE  README.md  main.py  pyproject.toml
products/berlin-biyori-bot/.github/workflows/: post.yml
products/berlin-biyori-bot/agents/: formatter.py  ogp.py  orchestrator.py  poster.py  scraper.py  translator.py
products/berlin-biyori-bot/data/: posted_urls.json
products/berlin-biyori-bot/prompts/: translate.txt
products/berlin-biyori-bot/tests/: test_formatter.py  test_scraper.py  test_translator.py
products/berlinchat/: .gitignore  README.md
(+41 files in other folders)
